# eip2539_go_bindings

./: Cargo.toml  build.rs  make.sh  make_adx.sh  make_asm.sh
eip2539go/: .gitignore  Makefile  go.mod  go.sum  lib.go  lib_test.go
src/: api.rs  enums.rs  lib.rs
